Split build.gradle.kts into lib/build.gradle.kts and demo/build.gradle.kts

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ openrndr.tasks=true
 kotlin.code.style=official
 #org.gradle.configuration-cache=true
 #org.gradle.configuration-cache.problems=warn
+group=de.thecommcraft
+version=0.2.0
