--- a/.github/workflows/publish-binaries.yaml
+++ b/.github/workflows/publish-binaries.yaml
@@ -1,10 +1,7 @@
 name: Publish binaries
 
 on:
-  push:
-    tags:
-      - v1.*
-      - v1.*.*
+  workflow_dispatch: 
 
 permissions:
   contents: write
